--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^6.1.0
+  google_fonts: ^6.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   just_audio: ^0.10.5
+  http: ^1.5.0
+  record: ^6.1.2
+  path_provider: ^2.1.5
+  file_picker: ^10.3.3
 
 dev_dependencies:
   flutter_test:
