--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   record: ^6.1.2
   path_provider: ^2.1.5
   file_picker: ^10.3.3
+  flutter_tts: ^4.0.2
 
 dev_dependencies:
   flutter_test:
